src/main/resources/api/examples/errors/error-example-500.raml
#%RAML 1.0 NamedExample
values:

  message: Internal Server Error
  errors:  
    - #item 1
      "code": xxx-000
      "message": A generic error message, given when no more specific message is suitable.